ENEX FSL/snapshotDownload (1)/objects/WorkOrder.object
<CustomObject><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><externalSharingModel>Private</externalSharingModel><fields><fullName>Area__c</fullName><externalId>false</externalId><label>Area</label><required>false</required><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Adblue</fullName><default>false</default><label>Adblue</label></value><value><fullName>Agua y drenajes</fullName><default>false</default><label>Agua y drenajes</label></value><value><fullName>Bodega</fullName><default>false</default><label>Bodega</label></value><value><fullName>Gas</fullName><default>false</default><label>Gas</label></value><value><fullName>Gas Licuado</fullName><default>false</default><label>Gas Licuado</label></value><value><fullName>Lubricantes</fullName><default>false</default><label>Lubricantes</label></value><value><fullName>Oficina</fullName><default>false</default><label>Oficina</label></value><value><fullName>Playa</fullName><default>false</default><label>Playa</label></value><value><fullName>Red Fex</fullName><default>false</default><label>Red Fex</label></value><value><fullName>Rincon Bici</fullName><default>false</default><label>Rincon Bici</label></value><value><fullName>Tienda</fullName><default>false</default><label>Tienda</label></value><value><fullName>Transporte despacho</fullName><default>false</default><label>Transporte despacho</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Correo_Propietario_Caso__c</fullName><externalId>false</externalId><label>Correo Propietario Caso</label><required>false</required><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><type>Email</type><unique>false</unique></fields><fields><fullName>Correo_de_aprobador_a_notificar__c</fullName><externalId>false</externalId><inlineHelpText>Llene este campo si no tiene la información en el documento de la OC</inlineHelpText><label>Proveedor/Correo</label><required>false</required><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><type>Email</type><unique>false</unique></fields><fields><fullName>Cuenta_Objeto_Gasto__c</fullName><externalId>false</externalId><label>Cuenta Objeto Gasto</label><length>60</length><required>false</required><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Elemento__c</fullName><externalId>false</externalId><label>Elemento</label><required>false</required><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><type>Picklist</type><valueSet><controllingField>Sistema__c</controllingField><restricted>true</restricted><valueSetDefinition><sorted>true</sorted><value><fullName>5 PORT SWITCH</fullName><default>false</default><label>5 PORT SWITCH</label></value><value><fullName>8 PORT CONVERTER</fullName><default>false</default><label>8 PORT CONVERTER</label></value><value><fullName>ABRAZADERAS</fullName><default>false</default><label>ABRAZADERAS</label></value><value><fullName>ACEITE CAJA DE CAMBIOS</fullName><default>false</default><label>ACEITE CAJA DE CAMBIOS</label></value><value><fullName>ACOPLE DE LLENADO API</fullName><default>false</default><label>ACOPLE DE LLENADO API</label></value><value><fullName>ACOPLE DE LLENADO WIGGINS</fullName><default>false</default><label>ACOPLE DE LLENADO WIGGINS</label></value><value><fullName>ACOPLE RAPIDO-NOZZLE</fullName><default>false</default><label>ACOPLE RAPIDO-NOZZLE</label></value><value><fullName>ACOPLE RAPIDO-RECEIVER</fullName><default>false</default><label>ACOPLE RAPIDO-RECEIVER</label></value><value><fullName>ACOPLE WIGGINS</fullName><default>false</default><label>ACOPLE WIGGINS</label></value><value><fullName>ACOPLE WIGGINS ENTREGA</fullName><default>false</default><label>ACOPLE WIGGINS ENTREGA</label></value><value><fullName>ACUMULADOR DE AIRE</fullName><default>false</default><label>ACUMULADOR DE AIRE</label></value><value><fullName>AIRE ACONDICIONADO</fullName><default>false</default><label>AIRE ACONDICIONADO</label></value><value><fullName>ALARMA DE RETROCESO</fullName><default>false</default><label>ALARMA DE RETROCESO</label></value><value><fullName>ALTERNADOR</fullName><default>false</default><label>ALTERNADOR</label></value><value><fullName>AMORTIGUADORES</fullName><default>false</default><label>AMORTIGUADORES</label></value><value><fullName>ANTENA/RADIO BASE</fullName><default>false</default><label>ANTENA/RADIO BASE</label></value><value><fullName>ASIENTOS</fullName><default>false</default><label>ASIENTOS</label></value><value><fullName>ASPAS VENTILADOR</fullName><default>false</default><label>ASPAS VENTILADOR</label></value><value><fullName>ATRILES SEGURIDAD</fullName><default>false</default><label>ATRILES SEGURIDAD</label></value><value><fullName>AUTOMATIZADO</fullName><default>false</default><label>AUTOMATIZADO</label></value><value><fullName>BALATAS</fullName><default>false</default><label>BALATAS</label></value><value><fullName>BALIZA</fullName><default>false</default><label>BALIZA</label></value><value><fullName>BARRA ANTICICLISTAS</fullName><default>false</default><label>BARRA ANTICICLISTAS</label></value><value><fullName>BARRA ANTIVUELCO</fullName><default>false</default><label>BARRA ANTIVUELCO</label></value><value><fullName>BARRERAS DE SEGURIDAD</fullName><default>false</default><label>BARRERAS DE SEGURIDAD</label></value><value><fullName>BARRILES ARENA</fullName><default>false</default><label>BARRILES ARENA</label></value><value><fullName>BATERIA</fullName><default>false</default><label>BATERIA</label></value><value><fullName>BIELA TRANSVERSAL</fullName><default>false</default><label>BIELA TRANSVERSAL</label></value><value><fullName>BLOWER</fullName><default>false</default><label>BLOWER</label></value><value><fullName>BOCINA</fullName><default>false</default><label>BOCINA</label></value></valueSetDefinition></valueSet></fields><fields><fullName>EquipoSG__c</fullName><externalId>false</externalId><label>Equipo</label><required>false</required><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Aire Acondicionado</fullName><default>false</default><label>Aire Acondicionado</label></value><value><fullName>Alarma</fullName><default>false</default><label>Alarma</label></value><value><fullName>Area de descarga de camiones</fullName><default>false</default><label>Area de descarga de camiones</label></value><value><fullName>Area de despacho de combustibles</fullName><default>false</default><label>Area de despacho de combustibles</label></value><value><fullName>Atril baldes de arena/tambores</fullName><default>false</default><label>Atril baldes de arena/tambores</label></value><value><fullName>Baño Clientes</fullName><default>false</default><label>Baño Clientes</label></value><value><fullName>Baño Empleados</fullName><default>false</default><label>Baño Empleados</label></value><value><fullName>Barras protección lateral</fullName><default>false</default><label>Barras protección lateral</label></value><value><fullName>Barreras de descarga</fullName><default>false</default><label>Barreras de descarga</label></value><value><fullName>Basureros</fullName><default>false</default><label>Basureros</label></value><value><fullName>Bodega</fullName><default>false</default><label>Bodega</label></value><value><fullName>Bomba</fullName><default>false</default><label>Bomba</label></value><value><fullName>Bombas sumergibles</fullName><default>false</default><label>Bombas sumergibles</label></value><value><fullName>Bombona</fullName><default>false</default><label>Bombona</label></value><value><fullName>Botonera de Emergencia</fullName><default>false</default><label>Botonera de Emergencia</label></value><value><fullName>Caja de Fondos Oficina</fullName><default>false</default><label>Caja de Fondos Oficina</label></value><value><fullName>Caja de Fondos Tienda</fullName><default>false</default><label>Caja de Fondos Tienda</label></value><value><fullName>Cámara de inspección / punto de muestreo</fullName><default>false</default><label>Cámara de inspección / punto de muestreo</label></value><value><fullName>Cámara separadora</fullName><default>false</default><label>Cámara separadora</label></value><value><fullName>Camión FEX</fullName><default>false</default><label>Camión FEX</label></value><value><fullName>Campana extractora de aire</fullName><default>false</default><label>Campana extractora de aire</label></value><value><fullName>Canaleta perimetral de contención</fullName><default>false</default><label>Canaleta perimetral de contención</label></value><value><fullName>Cañería de agua potable</fullName><default>false</default><label>Cañería de agua potable</label></value><value><fullName>Car Wash</fullName><default>false</default><label>Car Wash</label></value><value><fullName>Caseta Nochero</fullName><default>false</default><label>Caseta Nochero</label></value><value><fullName>CCTV</fullName><default>false</default><label>CCTV</label></value><value><fullName>Cielo raso</fullName><default>false</default><label>Cielo raso</label></value><value><fullName>Circuito enchufes</fullName><default>false</default><label>Circuito enchufes</label></value><value><fullName>Compresor de Aire</fullName><default>false</default><label>Compresor de Aire</label></value><value><fullName>Consola autoservicio</fullName><default>false</default><label>Consola autoservicio</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Equipo__c</fullName><externalId>false</externalId><formula>TEXT(Asset.Equipo__c)</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Equipo</label><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>FSL__IsFillInCandidate__c</fullName><defaultValue>true</defaultValue><deprecated>false</deprecated><externalId>false</externalId><label>Is Fill In Candidate</label><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</fullName><defaultValue>false</defaultValue><deprecated>false</deprecated><externalId>false</externalId><label>Prevent Geocoding For Chatter Actions</label><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>FSL__Scheduling_Priority__c</fullName><deprecated>false</deprecated><externalId>false</externalId><formula>CASE(TEXT(Priority), &apos;Critical&apos; , 1 ,&apos;High&apos; ,2,&apos;Medium&apos; ,3 , &apos;Low&apos;, 4, null)</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Scheduling Priority</label><precision>18</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>FSL__VisitingHours__c</fullName><deleteConstraint>SetNull</deleteConstraint><deprecated>false</deprecated><externalId>false</externalId><label>Visiting Hours</label><referenceTo>OperatingHours</referenceTo><relationshipLabel>Work Orders</relationshipLabel><relationshipName>Work_Orders</relationshipName><required>false</required><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><type>Lookup</type></fields><fields><fullName>Falla__c</fullName><externalId>false</externalId><label>Falla</label><required>false</required><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><type>Picklist</type><valueSet><controllingField>Elemento__c</controllingField><restricted>true</restricted><valueSetDefinition><sorted>true</sorted><value><fullName>ABRAZADERA DEFECTUOSA</fullName><default>false</default><label>ABRAZADERA DEFECTUOSA</label></value><value><fullName>ACCIONAMIENTO TOMA FUERZA DEFECTUOSO</fullName><default>false</default><label>ACCIONAMIENTO TOMA FUERZA DEFECTUOSO</label></value><value><fullName>ACCIONAMIENTO VALVULA DE FONDO DEFECTUOSO</fullName><default>false</default><label>ACCIONAMIENTO VALVULA DE FONDO DEFECTUOSO</label></value><value><fullName>ACOPLAMIENTO DIFICULTOSO</fullName><default>false</default><label>ACOPLAMIENTO DIFICULTOSO</label></value><value><fullName>ACOPLE API DEFECTUOSO</fullName><default>false</default><label>ACOPLE API DEFECTUOSO</label></value><value><fullName>ACOPLE API FILTRA</fullName><default>false</default><label>ACOPLE API FILTRA</label></value><value><fullName>ACOPLE DEFECTUOSO</fullName><default>false</default><label>ACOPLE DEFECTUOSO</label></value><value><fullName>ACOPLE FILTRA</fullName><default>false</default><label>ACOPLE FILTRA</label></value><value><fullName>ACOPLE RAPIDO-NOZZLE DEFECTUOSO</fullName><default>false</default><label>ACOPLE RAPIDO-NOZZLE DEFECTUOSO</label></value><value><fullName>ACOPLE RAPIDO-RECEIVER DEFECTUOSO</fullName><default>false</default><label>ACOPLE RAPIDO-RECEIVER DEFECTUOSO</label></value><value><fullName>ACOPLE WIGGINS DEFECTUOSO</fullName><default>false</default><label>ACOPLE WIGGINS DEFECTUOSO</label></value><value><fullName>ACOPLE WIGGINS FILTRA</fullName><default>false</default><label>ACOPLE WIGGINS FILTRA</label></value><value><fullName>ACUMULADOR CON PRESENCIA DE ACEITE</fullName><default>false</default><label>ACUMULADOR CON PRESENCIA DE ACEITE</label></value><value><fullName>AIRE ACONDICIONADO NO FUNCIONA</fullName><default>false</default><label>AIRE ACONDICIONADO NO FUNCIONA</label></value><value><fullName>ALARMA DE RETROCESO EN MAL ESTADO</fullName><default>false</default><label>ALARMA DE RETROCESO EN MAL ESTADO</label></value><value><fullName>ALARMA RETROCESO NO FUNCIONA</fullName><default>false</default><label>ALARMA RETROCESO NO FUNCIONA</label></value><value><fullName>ALTERNADOR NO CARGA</fullName><default>false</default><label>ALTERNADOR NO CARGA</label></value><value><fullName>ALZA DE TEMPERATURA</fullName><default>false</default><label>ALZA DE TEMPERATURA</label></value><value><fullName>ALZA VIDRIO DEFECTUOSO</fullName><default>false</default><label>ALZA VIDRIO DEFECTUOSO</label></value><value><fullName>AMORTIGUADOR CON FUGA</fullName><default>false</default><label>AMORTIGUADOR CON FUGA</label></value><value><fullName>AMPOLLETA DELANTERA EN MAL ESTADO</fullName><default>false</default><label>AMPOLLETA DELANTERA EN MAL ESTADO</label></value><value><fullName>AMPOLLETA TRASERA EN MAL ESTADO</fullName><default>false</default><label>AMPOLLETA TRASERA EN MAL ESTADO</label></value><value><fullName>ANTENA EN MAL ESTADO</fullName><default>false</default><label>ANTENA EN MAL ESTADO</label></value><value><fullName>ASIENTO DAÑADO</fullName><default>false</default><label>ASIENTO DAÑADO</label></value><value><fullName>ASIENTO SUCIO</fullName><default>false</default><label>ASIENTO SUCIO</label></value><value><fullName>ASPA VENTILADOR DAÑADA</fullName><default>false</default><label>ASPA VENTILADOR DAÑADA</label></value><value><fullName>ATASCADO</fullName><default>false</default><label>ATASCADO</label></value><value><fullName>AUSENTE</fullName><default>false</default><label>AUSENTE</label></value><value><fullName>BAJO CAUDAL DE ENTREGA</fullName><default>false</default><label>BAJO CAUDAL DE ENTREGA</label></value><value><fullName>BALIZA DAÑADA</fullName><default>false</default><label>BALIZA DAÑADA</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Fecha_Cambio_Estado__c</fullName><externalId>false</externalId><label>Fecha Cambio Estado</label><required>false</required><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><type>Date</type></fields><fields><fullName>Fecha_de_Recepcion_Cotizacion__c</fullName><externalId>false</externalId><label>Fecha de Recepción Cotización</label><required>false</required><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><type>Date</type></fields><fields><fullName>Fecha_de_Visado__c</fullName><externalId>false</externalId><label>Fecha de Visado</label><required>false</required><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><type>Date</type></fields><fields><fullName>File_Estaci_n_de_Servicio__c</fullName><deleteConstraint>SetNull</deleteConstraint><externalId>false</externalId><label>File Estación de Servicio</label><referenceTo>File_Estaci_n_de_Servicio__c</referenceTo><relationshipLabel>Órdenes de trabajo</relationshipLabel><relationshipName>rdenes_de_trabajo</relationshipName><required>false</required><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><type>Lookup</type></fields><fields><fullName>Monto_OC_UF__c</fullName><externalId>false</externalId><formula>(Monto_Total_OC__c*CURRENCYRATE(&apos;CLF&apos;))</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Monto OC UF</label><precision>18</precision><required>false</required><scale>1</scale><trackHistory>false</trackHistory><type>Currency</type></fields><fields><fullName>Monto_Total_OC__c</fullName><externalId>false</externalId><label>Monto Total OC</label><precision>18</precision><required>false</required><scale>0</scale><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><type>Currency</type></fields><fields><fullName>Requiere_OC__c</fullName><defaultValue>false</defaultValue><description>Campo para SGMM, controla la necesidad de aprobación de una OC relacionada a la compra de productos o servicios adicionales</description><externalId>false</externalId><inlineHelpText>Recuerde adjuntar en los archivos la(s) OC para su aprobación</inlineHelpText><label>Requiere OC</label><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>Sistema__c</fullName><externalId>false</externalId><label>Sistema</label><required>false</required><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><type>Picklist</type><valueSet><controllingField>Tipo_de_Activo__c</controllingField><restricted>true</restricted><valueSetDefinition><sorted>true</sorted><value><fullName>AIRE ACONDICIONADO</fullName><default>false</default><label>AIRE ACONDICIONADO</label></value><value><fullName>ALARMA RETROCESO</fullName><default>false</default><label>ALARMA RETROCESO</label></value><value><fullName>AUTOMATIZACION</fullName><default>false</default><label>AUTOMATIZACION</label></value><value><fullName>BOMBA BRAZO DE CARGA</fullName><default>false</default><label>BOMBA BRAZO DE CARGA</label></value><value><fullName>BOMBAS CARGA</fullName><default>false</default><label>BOMBAS CARGA</label></value><value><fullName>BOMBAS DESCARGA</fullName><default>false</default><label>BOMBAS DESCARGA</label></value><value><fullName>BOMBAS DESPACHO</fullName><default>false</default><label>BOMBAS DESPACHO</label></value><value><fullName>BOMBAS RECEPCION</fullName><default>false</default><label>BOMBAS RECEPCION</label></value><value><fullName>BOTONERAS</fullName><default>false</default><label>BOTONERAS</label></value><value><fullName>BRAZO DE CARGA</fullName><default>false</default><label>BRAZO DE CARGA</label></value><value><fullName>CABINA</fullName><default>false</default><label>CABINA</label></value><value><fullName>CABINA/CHASSIS</fullName><default>false</default><label>CABINA/CHASSIS</label></value><value><fullName>CAJA DE CAMBIOS</fullName><default>false</default><label>CAJA DE CAMBIOS</label></value><value><fullName>CALEFACCION</fullName><default>false</default><label>CALEFACCION</label></value><value><fullName>CAMARA</fullName><default>false</default><label>CAMARA</label></value><value><fullName>CAMION</fullName><default>false</default><label>CAMION</label></value><value><fullName>CAMIONETA</fullName><default>false</default><label>CAMIONETA</label></value><value><fullName>CHASIS</fullName><default>false</default><label>CHASIS</label></value><value><fullName>DIFERENCIALES</fullName><default>false</default><label>DIFERENCIALES</label></value><value><fullName>DIFERENCIAL TRASERO</fullName><default>false</default><label>DIFERENCIAL TRASERO</label></value><value><fullName>DISPENSADOR</fullName><default>false</default><label>DISPENSADOR</label></value><value><fullName>ELEMENTOS SEGURIDAD</fullName><default>false</default><label>ELEMENTOS SEGURIDAD</label></value><value><fullName>EMBRAGUE</fullName><default>false</default><label>EMBRAGUE</label></value><value><fullName>EQUIPAMIENTO SEGURIDAD/MINERO</fullName><default>false</default><label>EQUIPAMIENTO SEGURIDAD/MINERO</label></value><value><fullName>EQUIPO ABASTECIMIENTO-CENTRAL HIDRAULICA</fullName><default>false</default><label>EQUIPO ABASTECIMIENTO-CENTRAL HIDRAULICA</label></value><value><fullName>EQUIPO ABASTECIMIENTO-HIDROLAVADO</fullName><default>false</default><label>EQUIPO ABASTECIMIENTO-HIDROLAVADO</label></value><value><fullName>EQUIPO ABASTECIMIENTO-TRASVASIJE ACEITE USADO</fullName><default>false</default><label>EQUIPO ABASTECIMIENTO-TRASVASIJE ACEITE USADO</label></value><value><fullName>EQUIPO ABASTECIMIENTO-TRASVASIJE GRASA MULTIPROPOSITO</fullName><default>false</default><label>EQUIPO ABASTECIMIENTO-TRASVASIJE GRASA MULTIPROPOSITO</label></value><value><fullName>EQUIPO ABASTECIMIENTO-TRASVASIJE GRASA OPEN GEAR</fullName><default>false</default><label>EQUIPO ABASTECIMIENTO-TRASVASIJE GRASA OPEN GEAR</label></value><value><fullName>EQUIPO ABASTECIMIENTO-TRASVASIJE ISO VG32 COMPRESOR</fullName><default>false</default><label>EQUIPO ABASTECIMIENTO-TRASVASIJE ISO VG32 COMPRESOR</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Tipo_de_Activo__c</fullName><description>Tipo de Activo Camión o Instalación</description><externalId>false</externalId><inlineHelpText>Tipo de Activo Camión o Instalación</inlineHelpText><label>Tipo de Activo</label><required>false</required><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>CAMION ALJIBE</fullName><default>false</default><label>CAMION ALJIBE</label></value><value><fullName>CAMION LUBRICADOR</fullName><default>false</default><label>CAMION LUBRICADOR</label></value><value><fullName>CAMIONETA</fullName><default>false</default><label>CAMIONETA</label></value><value><fullName>ESTACION DE SERVICIOS</fullName><default>false</default><label>ESTACION DE SERVICIOS</label></value><value><fullName>FAENA</fullName><default>false</default><label>FAENA</label></value><value><fullName>MULTIPROPOSITO</fullName><default>false</default><label>MULTIPROPOSITO</label></value><value><fullName>PETROLERA</fullName><default>false</default><label>PETROLERA</label></value><value><fullName>PETROLERA SEMI MOVIL</fullName><default>false</default><label>PETROLERA SEMI MOVIL</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Valor_Aprobado_OC__c</fullName><externalId>false</externalId><label>Valor Aprobado OC</label><precision>18</precision><required>false</required><scale>0</scale><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><type>Currency</type></fields><fields><fullName>Valor_Estimado_OC__c</fullName><externalId>false</externalId><label>Valor Estimado OC</label><precision>18</precision><required>false</required><scale>0</scale><trackFeedHistory>false</trackFeedHistory><trackHistory>false</trackHistory><type>Currency</type></fields><listViews><fullName>All_WorkOrders</fullName><columns>Name</columns><columns>Subject</columns><columns>Account</columns><columns>Priority</columns><columns>Status</columns><columns>RecordType</columns><filterScope>Everything</filterScope><label>Todas las órdenes de trabajo</label></listViews><listViews><fullName>My_WorkOrders</fullName><columns>Status</columns><columns>Name</columns><columns>Asset</columns><columns>Falla__c</columns><columns>Subject</columns><columns>Priority</columns><columns>StartDate</columns><columns>RecordType</columns><filterScope>Mine</filterScope><filters><field>RecordType</field><operation>equals</operation><value>WorkOrder.OT_Est_ndar_SGMM,WorkOrder.OT_R_pida</value></filters><label>Mis órdenes de trabajo</label><language>es</language><sharedTo><role>Administrador_Mineria_SGMM</role><role>Ejecutivo_SGMM</role></sharedTo></listViews><listViews><fullName>OT_Mesa_de_Ayuda</fullName><columns>Name</columns><columns>Account</columns><columns>Asset</columns><columns>Sistema__c</columns><columns>Elemento__c</columns><columns>Subject</columns><columns>Falla__c</columns><columns>Case</columns><columns>Status</columns><filterScope>Everything</filterScope><filters><field>RecordType</field><operation>equals</operation><value>WorkOrder.OT_MDA</value></filters><label>OT Mesa de Ayuda</label><sharedTo><group>MDA_Field_Service</group></sharedTo></listViews><listViews><fullName>OT_SGMM</fullName><columns>Name</columns><columns>Account</columns><columns>Asset</columns><columns>Sistema__c</columns><columns>Elemento__c</columns><columns>Subject</columns><columns>Falla__c</columns><columns>Case</columns><columns>Status</columns><filterScope>Everything</filterScope><filters><field>RecordType</field><operation>equals</operation><value>WorkOrder.OT_Est_ndar_SGMM,WorkOrder.OT_R_pida</value></filters><label>OT SGMM Estandar</label><sharedTo><group>SGMM_Field_Service</group><role>Administrador_Mineria_SGMM</role><role>Ejecutivo_SGMM</role></sharedTo></listViews><listViews><fullName>OT_SGMM_Rapida</fullName><columns>Name</columns><columns>Account</columns><columns>Sistema__c</columns><columns>Elemento__c</columns><columns>Subject</columns><columns>Falla__c</columns><columns>Status</columns><columns>Case</columns><filterScope>Mine</filterScope><label>OT SGMM Rapida</label><sharedTo><group>SGMM_Field_Service</group></sharedTo></listViews><listViews><fullName>Orden_de_Compra_Aprobada</fullName><columns>Name</columns><columns>Account</columns><columns>Subject</columns><columns>Status</columns><columns>Priority</columns><filterScope>Mine</filterScope><label>Orden de Compra Aprobada</label><sharedTo><group>Orden_Compra_SGMM</group></sharedTo></listViews><listViews><fullName>SGME_Preventiva</fullName><columns>Name</columns><columns>Subject</columns><columns>Account</columns><columns>Priority</columns><columns>Status</columns><columns>Id</columns><filterScope>Everything</filterScope><filters><field>RecordType</field><operation>equals</operation><value>WorkOrder.OT_Mantenci_n_Preventiva</value></filters><label>SGME Preventiva</label><sharedTo><group>SGME_Field_Service</group></sharedTo></listViews><listViews><fullName>SGME_Proyecto_especial</fullName><columns>Name</columns><columns>Subject</columns><columns>Account</columns><columns>Priority</columns><columns>Status</columns><filterScope>Everything</filterScope><filters><field>RecordType</field><operation>equals</operation><value>WorkOrder.OT_Proyecto_Especial</value></filters><label>SGME Proyecto especial</label><sharedTo><group>SGME_Field_Service</group></sharedTo></listViews><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>true</recordTypeTrackHistory><recordTypes><fullName>OT_Est_ndar_SGMM</fullName><active>true</active><label>OT Estándar SGMM</label></recordTypes><recordTypes><fullName>OT_MDA</fullName><active>true</active><label>OT MDA</label></recordTypes><recordTypes><fullName>OT_Mantenci_n_Preventiva</fullName><active>true</active><label>OT Mantención Preventiva</label></recordTypes><recordTypes><fullName>OT_Proyecto_Especial</fullName><active>true</active><label>OT Proyecto Especial</label></recordTypes><recordTypes><fullName>OT_R_pida</fullName><active>true</active><label>OT Rápida</label></recordTypes><recordTypes><fullName>OT_Reactiva</fullName><active>true</active><label>OT Reactiva</label></recordTypes><recordTypes><fullName>OT_Reclamo</fullName><active>true</active><label>OT Reclamo</label></recordTypes><recordTypes><fullName>OT_Siniestro</fullName><active>true</active><label>OT Siniestro</label></recordTypes><sharingModel>Private</sharingModel><validationRules><fullName>Cierre_OT_SGMM</fullName><active>true</active><errorConditionFormula>AND( OR(RecordType.Name = &apos;OT Estándar SGMM&apos;,RecordType.Name = &apos;OT Rápida&apos;),  $Profile.Name &lt;&gt; &apos;Usuario Standard SGMM&apos;, $Profile.Name &lt;&gt; &apos;Administrador del sistema&apos;,  ISPICKVAL( Status ,&apos;Cerrado&apos;) )</errorConditionFormula><errorMessage>Solo puede marcar la OT como completada</errorMessage></validationRules><validationRules><fullName>Valida_Campos_previos_a_Presupuesto_SGME</fullName><active>true</active><description>Valida llenado de campos previos a Presupuesto - SGME</description><errorConditionFormula>AND( ISPICKVAL(Status, &apos;En presupuesto&apos;),  OR(ISNULL( Valor_Estimado_OC__c ),  ISNULL( Fecha_de_Recepcion_Cotizacion__c )))</errorConditionFormula><errorMessage>Debe agregar el valor estimado de la OC y la fecha de recepción de la cotización para poder seleccionar esta etapa.</errorMessage></validationRules></CustomObject>